syntax = "proto3";// 指定protobuf版本
option java_package = "tv.fengmang.ccpush.proto";// 指定包名
option java_outer_classname = "CcMessage";// 指定生成的类名

message Msg {
  Header header = 1;// 消息头
  Content content = 2;// 消息体

  enum MsgType{
    TYPE_NONE = 0;      //非有用消息类型

    TYPE_HAND_SHARK = 100001;      //握手

    TYPE_HEART_BEAT = 200001;      //心跳

    TYPE_REPORT = 300001;          //收到对方消息后，回个消息告诉对方已经收到了消息

    TYPE_PUSH = 400001;            //普通通讯消息
  }

  enum ContentType{
    CONTENT_TYPE_NONE = 0;
    CONTENT_TYPE_TEXT = 1;
    CONTENT_TYPE_IMAGE = 2;
    CONTENT_TYPE_LINK = 3;
  }
}

message Header {
  string id = 1;// 消息id
  Msg.MsgType type = 2;// 消息类型
  Msg.ContentType contentType = 3;// 消息内容类型
  string fromId = 4;// 消息发送者id
  string toId = 5;// 消息接收者id
  int64 msgTs = 6;// 消息时间戳
  int32 msgStatus = 7;// 状态报告
  string extend = 8;// 扩展字段，以key/value形式存放的json
}
message Content{
  string body = 1;
  int32 length = 2;
}



